[build-system]
requires = ["setuptools >= 61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[project]
name = "yeabm25"
description = """Yet Another BM25 algorithm implementation with update method, so that you dont need to fit on old + new documents.
Also you can get document and query vectors to use with any Vector DB."""
requires-python = ">=3.10"
version = "0.1.0"
keywords = ["text", "bm25", "dense vector embeddings", "information retrieval", "hybrid search"]
readme = "README.md"
dependencies = [
  "numpy>=1.26",
]
authors = [
  {name = "Demir Tonchev", email = "{surname}.{name}@gmail.com"},
]
license = { file = "LICENSE" }

[project.urls]
Homepage = "https://github.com/DemirTonchev/yeabm25"

[project.optional-dependencies]
test = ["pytest", "coverage"]
